resources/assets/styles/components/_header-subsite-menu.scss
#page-header-subsite-menu {
  display: none;
  position: relative;

  a.menu-subsite-trigger,
  a.menu-subsite-trigger:visited,
  a.menu-subsite-trigger:hover,
  a.menu-subsite-trigger:focus {
    position: relative;
    color: $white;
    display: block;
    font-size: 24px;
    font-weight: 700;
    text-transform: uppercase;
    text-decoration: none !important;
    line-height: 47px;
    height: 47px;
    width: 47px;
    text-align: center;
    cursor: pointer;
    margin-right: $golden-ratio-2;

    @include respond(xs, sm) {
      display: none;
    }

    > span {
      color: $white;
    }
  }

  > div#menu-subsite-dropdown-wrap {
    position: absolute;
    z-index: 9;
    display: none;
    top: 47px;
    left: 0;
    border-top: 1px solid lighten($smokeyx, 5);

    ul {
      margin: 0;
      padding: 0;
      list-style: none;
      min-width: auto;
      float: none !important;
      box-shadow: $box-shadow-float;

      li {
        margin: 0;
        padding: 0;
        list-style: none;

        a,
        a:visited,
        a:focus,
        a:hover {
          width: 240px !important;
          color: $white;
          display: block;
          background-color: inherit;
          font-size: 15px;
          padding: 11px $golden-ratio-3 11px 17px;
          line-height: 1.29;

          > span {
            transition: $transition-all-fast;
            position: absolute;
            right: $golden-ratio-1;
            top: $golden-ratio-1;
            color: $rock;
          }
        }

        a:hover,
        a:focus {
          border-bottom: none;
        }

        &.current-menu-ancestor > a,
        &.current-menu-item > a {
          font-weight: 700;
        }
      }

      > li {
        background-color: $smokeyx;

        &:hover > a {
          background-color: darken($smokeyx, 5);
        }
      }
    }

    li.menu-item-has-children {
      position: relative;

      ul.dropdown-menu {
        position: absolute;
        display: none;
      }

      &:hover {
        a {
          position: relative;
          z-index: 1005;

          > span {
            right: $golden-ratio-0;
            color: $white;
          }
        }

        > ul.dropdown-menu {
          border: none;
          border-radius: 0 !important;
          display: block;
          border-left: 1px solid lighten($smokeyx, 5);
          left: 100%;
          top: 0;
          background-color: transparent;
        }
      }

      &:first-child {
        > ul.dropdown-menu {
          border-top: 1px solid lighten($smokeyx, 5);
          top: -1px;
        }
      }
    }
  }

  &:hover {
    a.menu-subsite-trigger {
      background-color: $smokeyx !important;
      border-left: 1px solid $smokeyx;
      border-right: 1px solid $smokeyx;
      position: relative;
      z-index: 10;
    }

    .menu-subsite-container {
      display: block;
    }
  }
}

.page-header--current-page {
  display: none;
  color: $gray-1;
  font-size: $type-2;
  padding-left: $golden-ratio-2;
  margin-left: $golden-ratio-2;
  align-items: center;
  border-left: 1px solid lighten($smokey, 5);
  height: $golden-ratio-4;
  width: 29%;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  line-height: 44px;
  padding-top: 3px;

  @include respond(xs, sm) {
    display: none !important;
  }

  &.page-header--current-page-close {
    display: none !important;
    background-color: $smokeyx !important;
    color: $white !important;

    .icon-left-open {
      font-size: $type-2;
      margin-right: $golden-ratio-0;
      color: $gray-1;
      display: none;
    }
  }
}

.page-header--current-page-expand,
.page-header--current-page-close {
  color: $white !important;
  cursor: pointer !important;
  background-color: transparent !important;
  position: absolute;
  bottom: 0;
  width: $golden-ratio-4;
  height: $golden-ratio-4;
  display: none;
  text-align: center;
  line-height: $golden-ratio-4;
  font-size: 24px !important;
  margin-left: -8.5px;

  @include respond(xs, sm) {
    display: block;
  }

  @include respond(sm) {
    margin-left: 0;
  }
}

.page-header--current-page-close {
  display: none;
}

.header-scroll-down {
  #page-header-subsite-menu,
  .page-header--current-page {
    display: block;
  }
}

body.subsite-menu-dropdown-expand {
  #page-header-subsite-menu {
    #menu-subsite-dropdown-wrap {
      display: block;
    }
  }
}

